--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,9 +6,14 @@ services:
     image: redis:latest
     ports:
       - '6379:6379'
+    healthcheck:
+      test: [ "CMD-SHELL", "redis_isready" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   postgres:
-    image: postgres
+    image: lms_app
     restart: always
     env_file: ./.env
     container_name: lms_db
@@ -50,6 +55,11 @@ services:
       - redis
       - postgres
       - app
+    healthcheck:
+      test: [ "CMD-SHELL", "celery_isready" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   celery_beat:
     build: .
@@ -60,6 +70,11 @@ services:
       - redis
       - postgres
       - app
+    healthcheck:
+      test: [ "CMD-SHELL", "celery_beat_isready" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 
 volumes:
